  * nx-libs.spec:
    - Add xkeyboard-config to nxagent's Requires. Should be a weak dependency,
      but RPM doesn't support that too well yet.

  [ Mike Gabriel ]
  * debian/libxinerama1.postinst.in:
    + Revert 5a9f829. Make sure libnx-Xinerama1 based Xinerama works
      again with X2Go on Debian based systems. 
    + Enforce symlink creation for Xinerama et al. library symlinks.

 -- X2Go Release Manager <git-admin@x2go.org>  Sat, 04 Jul 2015 06:29:19 +0200

nx-libs (2:3.5.0.32-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * Only use the first three numbers in the full version for current_version
    on OS X. ld(1) on 10.6 fails otherwise.
    Affected:
    - 0420_nxcomp_use-correct-library-naming-scheme-on-OS-X.full+lite.patch
    - 0620_nxcompext_use-correct-library-naming-scheme-on-OS-X.full.patch
    - 0621_nxcompshad_use-correct-library-naming-scheme-on-OS-X.full.patch
  * nx-X11: handle source pictures (those without a Drawable surface)
    gracefully.
    Adds:
    - 0017_nx-X11_fix-SetPictureFilter.full.patch
  * nx-X11: fix typo in previous patch.
    Affects:
    - 0017_nx-X11_fix-SetPictureFilter.full.patch
  * nx-X11: add more NULL guards to TEST and DEBUG sections of Render.c.
    Affects:
    - 0990_fix-DEBUG-and-TEST-builds.full.patch
  * CVE patches were previously not included in release tarballs.
    Rename:
    - 1001-LZW-decompress-fix-for-CVE-2011-2895-From-xorg-lib-X.patch =>
      1001-LZW-decompress-fix-for-CVE-2011-2895-From-xorg-.full.patch
    - 1002-Fix-CVE-2011-4028-File-disclosure-vulnerability.-ups.patch =>
      1002-Fix-CVE-2011-4028-File-disclosure-vulnerability.full.patch
    - 1003-Avoid-use-after-free-in-dix-dixfonts.c-doImageText-C.patch =>
      1003-Avoid-use-after-free-in-dix-dixfonts.c-doImageT.full.patch
    - 1004-CVE-2013-6462-unlimited-sscanf-overflows-stack-buffe.patch =>
      1004-CVE-2013-6462-unlimited-sscanf-overflows-stack-.full.patch