@@ -12,6 +12,9 @@ nx-libs (2:3.5.0.33-0x2go1) UNRELEASED; urgency=low
     + Revert 5a9f829. Make sure libnx-Xinerama1 based Xinerama works
       again with X2Go on Debian based systems. 
     + Enforce symlink creation for Xinerama et al. library symlinks.
+  * Xinerama symlinking: Attach Xinerama symlinking to nxagent bin:package (and
+    not libnx-xinerama1).
+    Backported from Arctica GH 3.6.x branch.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Sat, 04 Jul 2015 06:29:19 +0200
 
